--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,22 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@font-face {
+  font-family: "black";
+  src: url("../../public/Fonts/Druk-Medium-Trial.woff2") format("woff2");
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "blacked";
+  src: url("../../public/Fonts/Druk-Super-Trial.woff2") format("woff2");
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
+}
+
 @layer base {
   body {
     @apply bg-zinc-950 text-foreground;
@@ -15,12 +31,17 @@
 
 @layer components {
   .PrimaryBtn {
-    @apply flex items-center justify-center gap-3 bg-white text-black px-10 py-4 rounded-2xl font-black uppercase whitespace-nowrap tracking-tight hover:bg-indigo-500 focus:bg-indigo-500 hover:text-white transition-all hover:scale-105 focus:scale-105 active:scale-95 shadow-xl shadow-white/5;
+    @apply flex items-center justify-center gap-3 bg-white text-black px-10 py-4 rounded-2xl font-bold uppercase whitespace-nowrap tracking-tight hover:bg-indigo-500 focus:bg-indigo-500 hover:text-white transition-all hover:scale-105 focus:scale-105 active:scale-95 shadow-xl shadow-white/5;
   }
 
   .SecondaryBtn {
-    @apply flex items-center justify-center gap-3 bg-zinc-900/80 border backdrop-blur-sm border-white/10 whitespace-nowrap text-white px-10 py-4 rounded-2xl font-black uppercase tracking-tight md:w-fit w-full hover:bg-zinc-800 transition-all active:scale-95;
+    @apply flex items-center justify-center gap-3 bg-zinc-900/80 border backdrop-blur-sm border-white/10 whitespace-nowrap text-white px-10 py-4 rounded-2xl font-bold uppercase tracking-tight md:w-fit w-full hover:bg-zinc-800 transition-all active:scale-95;
   }
+}
+
+@theme {
+  --font-black: "black";
+  --font-blacked: "blacked";
 }
 
 @theme inline {
